--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   color: rgba(0, 0, 0, 0.85);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -15,8 +19,7 @@ body {
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
-  line-height: 1.4em;
-  min-height: 100vh;
+  height: 100%;
 
   overflow-x: hidden;
 
@@ -24,16 +27,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  background: rgba(0, 0, 15, 0.06);
-  border-radius: 4px;
-  color: #222;
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-  font-weight: 600;
-  margin: 0.2em;
-  letter-spacing: 0.01em;
-  padding: 0.2em 0.5em;
+#root {
+  height: 100%;
 }
 
 @media (min-width: 420px) {
